--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 https://github.com/AaronWatters/jp_doodle/zipball/master
-https://github.com/skvark/opencv-python.git
+
+
+scipy==1.3.1
+opencv-python==4.1.2.30
